# ledgermind

./: .bandit  .dockerignore  .gitignore  CORE_LOGIC_AUDIT.md  Dockerfile  LICENSE  Makefile  README.md  REMOVAL_LOG.md  bandit_output.json  benchmarks_failed_log.txt  ci_failed_log.txt  commit_message.txt  config_template.yaml  parse_test.js  parse_test.py  patch.py  patch_file.py  patch_file2.py  patch_mock.py  patch_test.py  plugin.yaml  pr_body.txt  pyproject.toml  requirements-dev.txt  run_query_bench.py  run_tests.sh  safety-report.json  safety-report2.json  security_failed_log.txt  test.json  test_benchmark.py  test_debug.py  test_merge_cache.py  test_merge_cache2.py  test_merge_cache3.py  test_parse.js  test_perf2.py  test_resolve_truth.py  test_search_policy.py  (+1 more)
.Jules/: palette.md
.github/hooks/: ledgermind.json  ledgermind_before.sh  ledgermind_stop.sh
.github/workflows/: benchmarks.yml  main.yml  minimal-ci.yml  publish.yml  security.yml
.hypothesis/constants/: 06ce4c6b8d0355ed  22d80571d973a9b2  272594ca61495ec7  29650d25d48e52cc  2a5eb21764db50c5  40ef32bb0003afbf  42f25e3758c794c6  48a7d341116832ab  (+29 more)
.jules/: bolt.md  palette.md  sentinel.md
adapters/: README.md  pyproject.toml
adapters/agent_memory_adapters/: __init__.py  anthropic.py  base.py  client.py  crewai.py  embeddings.py  google.py  interfaces.py  langchain.py  mcp_client.py  ollama.py  openai.py
adapters/tests/: test_anthropic.py  test_crewai.py  test_embeddings.py  test_langchain.py  test_llm_adapters.py  test_mcp_client.py  test_openai.py
benchmarks/: README.md  agentic_bench.py  benchmark_vector_search.py  compare_modes.py  configs.py  data_loader.py  evaluator.py  latency_bench.py  requirements-bench.txt  run_all.py  utils.py
core/: README.md  pyproject.toml  pytest.ini  requirements.txt
core/agent_memory_core/api/: memory.py  transfer.py
core/agent_memory_core/core/: compliance.py  events.py  exceptions.py  migration.py  optimization.py  policy.py  router.py  schemas.py  telemetry.py
core/agent_memory_core/reasoning/: conflict.py  decay.py  distillation.py  git_indexer.py  merging.py  reflection.py  resolution.py
core/agent_memory_core/reasoning/ranking/: graph.py  policy.py
core/agent_memory_core/stores/: audit_git.py  episodic.py  interfaces.py  postgres.py  semantic.py  vector.py
core/agent_memory_core/stores/semantic_store/: loader.py  meta.py  transactions.py
core/api/: memory.py
core/core/: policy.py  router.py  schemas.py
core/docs/: API.md  FAILURE_MODES.md  INVARIANTS.md  PROCESS_INVARIANTS.md
core/reasoning/: conflict.py  decay.py  reflection.py  resolution.py
core/stores/: episodic.py  semantic.py  vector.py
core/stores/semantic_store/: integrity.py  transitions.py
core/tests/audit/: conftest.py  test_api_boundaries.py  test_compliance.py  test_concurrency.py  test_episodic_decay.py  test_fuzzing.py  test_hermetic.py  test_hybrid_search.py  test_internal.py  test_migration.py  test_postgres_store.py  test_properties.py  test_reasoning.py  test_reflection_proactive.py  test_semantic.py  test_semantic_drift.py  test_smoke.py  test_stress.py  test_transfer.py  test_vector_search.py
core/tests/performance/: bench_ops.py
core/tests/stress/: test_concurrency.py
core/tests/stress/adversarial/: test_invariants.py
core/tests/stress/search/: test_hybrid_ranking.py
debug_mem/: episodic.db
docs/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKS.md  COMPARISON.md  CONFIGURATION.md  DATA_SCHEMAS.md  INTEGRATION_GUIDE.md  MCP_TOOLS.md  VSCODE_EXTENSION.md  WORKFLOWS.md  api-reference.md  architecture.md  benchmarks.md  compression.md  configuration.md  data-schemas.md  integration-guide.md  mcp-tools.md  phase_inheritance.md  vscode-extension.md  workflow.md
ledgermind_plugin/: __init__.py
mcp_server/: README.md  pyproject.toml  pytest.ini
mcp_server/agent_memory_server/: audit.py  cli.py  contracts.py  gateway.py  server.py  specification.py
mcp_server/agent_memory_server/tools/: environment.py
mcp_server/docs/: MCP_SPECIFICATION.md  SECURITY_CONTRACT.md  THREAT_MODEL.md
mcp_server/schema/: mcp_api_v1.json
mcp_server/tests/: test_access_control.py  test_e2e.py  test_gateway.py  test_integration.py
memory_lifecycle_test/: episodic.db
multi/: README.md  __init__.py  embeddings.py  example_usage.py  manager.py  pyproject.toml  schema.py
multi/adapters/: __init__.py  anthropic_adapter.py  google_adapter.py  mcp_adapter.py  ollama_adapter.py  openai_adapter.py
multi/agent_memory_multi/: __init__.py  cli.py  manager.py
multi/agent_memory_multi/adapters/: __init__.py  anthropic_adapter.py  google_adapter.py  mcp_adapter.py  ollama_adapter.py  openai_adapter.py
multi/agent_memory_multi/frameworks/: crewai_tool.py  environment_context.py  langchain_tool.py
multi/frameworks/: __init__.py  crewai_tool.py  environment_context.py  langchain_tool.py
multi/prompts/agnostic/: usage_rules.md
multi/tests/: test_manager.py
notebooks/: 01_introduction.ipynb
openclaw-plugin/: openclaw.plugin.json  package.json
runner/: README.md  pyproject.toml
runner/agent_memory_runner/: __init__.py  cli.py  extractor.py  governance.py  pty_driver.py
runner/tests/: test_extraction_logic.py  test_governance.py  test_pty_basic.py
scripts/: bump_version.py  cleanup_dormant_drafts.py  debug_enrich.py  enrich_hypotheses.py  enrich_one.py  full_system_test.py  hard_reset_memory.py  migrate_keywords.py  migrate_proposals_enrichment.py  migrate_v2_9_0_phases.py  rebuild_hypotheses.py  reindex_vector.py  repair_db.py  reset_database_recent.py  run_merging.py
test_stage5_debug/: episodic.db
tests/: conftest.py  lg.py  test_decay.py  test_integration.py  test_knowledge.py  test_lifecycle_ranking.py  test_merge.py  test_merging_advanced.py  test_merging_integration.py  test_merging_refactored.py  test_merging_unit.py  test_metrics.py  test_pipeline.py  test_promotion.py  test_resolution_edge_cases.py  test_valid_scan.py  test_verify_autonomous_heartbeat.py  test_verify_deep_integrity.py  test_verify_grounded_ranking.py  test_verify_tools_and_audit.py
(+220 files in other folders)
