[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgermind"
version = "3.1.0"

description = "Monolithic Autonomous Agent Memory Management System"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Stanislav Zotov", email = "staszotov555@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "pyyaml>=6.0,<7.0.0",
    "sqlalchemy>=2.0.0",
    "nest-asyncio>=1.6.0",
    "numpy>=1.24.0",
    "mcp>=0.1.0",
    "fastmcp>=0.1.0",
    "httpx>=0.25.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "sse-starlette>=1.6.0",
    "prometheus-client>=0.17.0",
    "annoy>=1.17.0",
    "llama-cpp-python>=0.2.0",
    "questionary>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/sl4m3/ledgermind"
Repository = "https://github.com/sl4m3/ledgermind"
"Bug Tracker" = "https://github.com/sl4m3/ledgermind/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0"
]

[project.scripts]
ledgermind = "ledgermind.server.cli:main"
ledgermind-mcp = "ledgermind.server.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ledgermind*"]
exclude = ["benchmarks*"]

[tool.setuptools.package-data]
ledgermind = ["VERSION"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "strict"
addopts = "-n 4 --dist loadscope --durations=5"
