[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-adapters"
version = "1.1.0"
description = "Universal LLM adapters for agent-memory-server (via MCP)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp>=0.1.0",
    "pydantic>=2.0.0"
]

[tool.setuptools]
packages = ["agent_memory_adapters"]
