[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-adapters"
version = "2.1.0"
description = "Universal LLM adapters for agent-memory-server (via MCP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "nest-asyncio>=1.6.0"
]

[tool.setuptools]
packages = ["agent_memory_adapters"]
