[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-core"
version = "2.0.1"
description = "Core logic for autonomous agent memory management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "pyyaml>=6.0,<7.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "prometheus-client>=0.17.0",
    "cryptography>=42.0.0",
    "boto3>=1.34.0",
    "redis>=5.0.0",
    "zstandard>=0.22.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_memory_core*"]
