[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-core"
version = "2.2.1"
description = "Core logic for autonomous agent memory management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "pyyaml>=6.0,<7.0.0",
    "sqlalchemy>=2.0.0",
    "nest-asyncio>=1.6.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_memory_core*"]
