[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-server"
version = "2.2.1"
description = "Dedicated MCP Server for agent-memory-core"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agent-memory-core",
    "mcp>=0.1.0",
    "fastmcp>=0.1.0",
    "PyYAML>=6.0",
    "httpx>=0.25.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "sse-starlette>=1.6.0",
    "prometheus-client>=0.17.0"
]

[project.scripts]
agent-memory-mcp = "agent_memory_server.cli:main"
agent-memory = "agent_memory_server.cli:main"

[tool.setuptools]
packages = ["agent_memory_server", "agent_memory_server.tools"]
