[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-multi"
version = "1.1.4"
description = "Universal bridge for agent-memory-core to various LLMs and frameworks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "agent-memory-core @ file://localhost/data/data/com.termux/files/home/projects/agent-memory/core",
    "mcp>=0.1.0",
    "fastmcp>=0.1.0"
]

[tool.setuptools]
packages = ["agent_memory_multi", "agent_memory_multi.adapters", "agent_memory_multi.frameworks", "agent_memory_multi.prompts"]

[project.scripts]
agent-memory-mcp = "agent_memory_multi.cli:main"
