[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-runner"
version = "2.1.0"
description = "PTY-based interceptor for enforcing Agent Memory context"
requires-python = ">=3.10"
dependencies = [
    "agent-memory-core",
]

[project.scripts]
am-run = "agent_memory_runner.cli:main"

[tool.setuptools]
packages = ["agent_memory_runner"]
